--- a/scripts/wplace_grief_checker/Cargo.toml
+++ b/scripts/wplace_grief_checker/Cargo.toml
@@ -1,7 +1,6 @@
 [package]
-name = "stat_generator"
+name = "wplace_grief_checker"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-image = "0.25.8"
