wplace-grief-checker (#8)
* rename stat generator

* readme typo

* update everything

--- a/scripts/wplace_common/Cargo.toml
+++ b/scripts/wplace_common/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
-name = "stat_generator"
+name = "wplace_common"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-image = "0.25.8"
+
+[lints]
+workspace = true
